// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`annotations annotates text nodes (no-overlap) 1`] = `
<div>
  <div>
    <blockquote>
      <strong>
        <mark
          data-annotation-id="a"
          id="a"
        >
          some
        </mark>
      </strong>
      

      <mark
        data-annotation-id="b"
        id="b"
      >
        content
      </mark>
    </blockquote>
  </div>
</div>
`;

exports[`annotations annotates text nodes (overlapping) 1`] = `
<div>
  <div>
    <blockquote>
      <strong>
        <mark
          className="class-a"
          data-annotation-id="a"
          id="a"
        >
          some
        </mark>
      </strong>
      <mark
        className="class-a"
        data-annotation-id="a"
        id="a"
      >
        

      </mark>
      <mark
        className="class-a"
        data-annotation-id="a"
      >
        <mark
          className="class-b"
          data-annotation-id="b"
          id="b"
        >
          c
        </mark>
      </mark>
      <mark
        className="class-a"
        data-annotation-id="a"
      >
        <mark
          className="class-b"
          data-annotation-id="b"
        >
          <mark
            className="class-c"
            data-annotation-id="c"
            id="c"
          >
            o
          </mark>
        </mark>
      </mark>
      <mark
        className="class-b"
        data-annotation-id="b"
      >
        <mark
          className="class-c"
          data-annotation-id="c"
        >
          nte
        </mark>
      </mark>
      <mark
        className="class-c"
        data-annotation-id="c"
      >
        nt
      </mark>
    </blockquote>
  </div>
</div>
`;

exports[`annotations applies custom class names and styles 1`] = `
<div>
  <div>
    <blockquote>
      <strong>
        <mark
          className="class-a"
          data-annotation-id="a"
          id="a"
          style={
            Object {
              "background": "red",
              "color": "yellow",
            }
          }
        >
          some
        </mark>
      </strong>
      

      <mark
        className="class-b1 class-b2"
        data-annotation-id="b"
        id="b"
      >
        content
      </mark>
    </blockquote>
  </div>
</div>
`;

exports[`annotations does not annotate with annotations out of range 1`] = `
<div>
  <div>
    <blockquote>
      <strong>
        some
      </strong>
      
content
    </blockquote>
  </div>
</div>
`;

exports[`annotations does not annotate with empty annotations 1`] = `
<div>
  <div>
    <blockquote>
      <strong>
        some
      </strong>
      
content
    </blockquote>
  </div>
</div>
`;
